# carsapi

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dumped.json  parse_dataset.py  pyproject.toml  tox.ini
api/: urls.py
api/url/: v1.py  v2.py
config/: settings.py  urls.py
config/settings/: __init__.py  dev.py  prod.py  settings_local.example.py
src/: admin.py  models.py
src/defs/: cars.py  rate.py
src/migrations/: 0001_initial.py
src/serializers/: cars.py  rate.py
src/views/v1/: cars.py  index.py  popular.py  rate.py
src/views/v2/: cars.py  flush_db.py  popular.py  rate.py
tests/views/: test_cars.py  test_popular.py  test_rate.py
